tests/functional2/lang/dup-attrs/eval-fail-deep.err.exp
error: attribute 'a.b.c' already defined at /pwd/in.nix:1:3
       at /pwd/in.nix:1:14:
            1| { a.b.c = 1; a.b.c.a.a = 1; }
             |              ^
            2|
